--- a/develop/assets/css/style.css
+++ b/develop/assets/css/style.css
@@ -9,6 +9,7 @@ body {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 }
 
+/* apply styles to <header> */
 header {
     padding: 20px;
     background-color: #2a607c;
@@ -50,6 +51,7 @@ header nav ul li a {
     text-decoration: none;
 }
 
+/* apply styles to <footer> */
 footer {
     padding: 30px;
     clear: both;
@@ -65,6 +67,7 @@ p {
     font-size: 16px;
 }
 
+/* Hero Style Start */
 .hero {
     height: 800px;
     width: 100%;
@@ -73,6 +76,8 @@ p {
     background-size: cover;
     background-position: center;
 }
+/* Hero Style End */
+
 
 .float-left {
     float: left;
