--- a/develop/assets/css/style.css
+++ b/develop/assets/css/style.css
@@ -78,6 +78,7 @@ p {
 }
 /* Hero Style End */
 
+/* Contents Style Starts */
 .contents {
     width: 75%;
     display: inline-block;
@@ -111,7 +112,9 @@ p {
     float: right;
     margin-left: 25px;
 }
+/* Contents Style Ends */
 
+/* Benefits Style Starts */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -123,50 +126,19 @@ p {
     background-color: #2589bd;
 }
 
-.benefit-lead {
+.benefit-title {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
+.benefit-title h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
+.benefit-title img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
-
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
+/* Benefits Style Ends */
